--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="app_name">Interval+</string>
     <string name="crash_toast_text">eskase</string>
+    <string name="start">Start</string>
+    <string name="save_plan">Save Plan</string>
+    <string name="no_plans">No saved plans yet!</string>
+    <string name="no_runs">No saved runs yet!</string>
 </resources>
