layout changes for list rows and strings

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="save_plan">Save Plan</string>
     <string name="no_plans">No saved plans yet!</string>
     <string name="no_runs">No saved runs yet!</string>
+    <string name="fastest">fastest</string>
+    <string name="select">select</string>
 </resources>
