--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="no_runs">No saved runs yet!</string>
     <string name="fastest">fastest</string>
     <string name="select">select</string>
+    <string name="dialog_error">Description must be between 1 and 20 characters</string>
 </resources>
