--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,12 +13,19 @@
     <string name="settings_error">Lengths must be up to 20 characters</string>
     <string name="start_hint">start sound (default \'Started\')</string>
     <string name="stop_hint">stop sound (default \'Stopped\')</string>
-    <string name="text_time">Time: 00h 00m 00s</string>
+    <string name="text_time">00 : 00 : 00</string>
     <string name="text_avg_pace">Pace avg: 0m 0s / km</string>
     <string name="text_pace">Pace: 0m 0s / km</string>
-    <string name="text_rounds">Rounds: N/A</string>
+    <string name="text_rounds">0 / 0</string>
     <string name="adId1">ca-app-pub-1164456313108704/9576922674</string>
     <string name="adId2">ca-app-pub-1164456313108704/6586430278</string>
+    <string name="seconds">Seconds</string>
+    <string name="rounds">Rounds</string>
+    <string name="distance">Distance</string>
+    <string name="delete">Delete</string>
+    <string name="save">Save</string>
+    <string name="sound">Sound</string>
+    <string name="vibrate">Vibrate</string>
 
     <!--<string name="nice_html">-->
         <!--<![CDATA[-->
