New Interval activity / CHECKPOINT

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="sound">Sound</string>
     <string name="vibrate">Vibrate</string>
     <string name="click">Click start markers for info</string>
+    <string name="facebook_app_id">1733286690224529</string>
+
 
 </resources>
