--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="crash_toast_text">eskase</string>
     <string name="start">Start</string>
     <string name="save_plan">Save Plan</string>
+    <string name="new_plan">New Plan</string>
     <string name="save_settings">Save Settings</string>
     <string name="no_plans">No saved plans yet!</string>
     <string name="no_runs">No saved runs yet!</string>
@@ -22,6 +23,7 @@
     <string name="adId3">ca-app-pub-1164456313108704/8546000271</string>
     <string name="seconds">Rest secs</string>
     <string name="rounds">Rounds</string>
+    <string name="start_rest_secs">Start rest</string>
     <string name="distance">Distance</string>
     <string name="delete">Delete</string>
     <string name="save">Save</string>
