--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="save">Save</string>
     <string name="sound">Sound</string>
     <string name="vibrate">Vibrate</string>
+    <string name="description">Enter Description</string>
     <string name="click">Click start markers for info</string>
     <string name="facebook_app_id">1733286690224529</string>
 
