--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,12 +31,13 @@
     <string name="sound">Sound</string>
     <string name="vibrate">Vibrate</string>
     <string name="description">Enter Plan Name</string>
-    <string name="click">Click start markers for info</string>
-    <string name="facebook_app_id">1733286690224529</string>
     <string name="plans">Plans</string>
     <string name="settings">Settings</string>
     <string name="diary">Diary</string>
     <string name="run">Run</string>
-
-
+    <string name="share">Share</string>
+    <string name="shareTitle">Share app using</string>
+    <string name="soon">Soon available!</string>
+    <string name="login">Login</string>
+    <string name="icons8"><a href="https://icons8.com/register/?key=Qdg6">Icons powered by Icons8</a></string>
 </resources>
