--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="map">Map</string>
     <string name="dialog_error">Name must be between 1 and 20 characters</string>
     <string name="settings_error">Lengths must be up to 20 characters</string>
-    <string name="text_time">00 : 00 : 00</string>
+    <string name="zero_time">00 : 00 : 00</string>
     <string name="text_avg_pace">Pace avg: 0m 0s / km</string>
     <string name="text_pace">Pace: 0m 0s / km</string>
     <string name="text_rounds">0 / 0</string>
