--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Interval+</string>
-    <string name="crash_toast_text">Ooops! I crashed! Please send me!</string>
+    <string name="crash_toast_text">Interval+ has crashed :( !!! Please help us by sending a report :)</string>
     <string name="start">Start</string>
     <string name="save_plan">Save Plan</string>
     <string name="new_plan">New Plan</string>
@@ -20,7 +20,6 @@
     <string name="text_pace">Pace: 0m 0s / km</string>
     <string name="adId1">ca-app-pub-1164456313108704/9576922674</string>
     <string name="adId2">ca-app-pub-1164456313108704/6586430278</string>
-    <string name="adId3">ca-app-pub-1164456313108704/8546000271</string>
     <string name="seconds">Rest secs</string>
     <string name="rounds">Rounds</string>
     <string name="start_rest_secs">Start rest</string>
@@ -30,6 +29,7 @@
     <string name="sound">Sound</string>
     <string name="vibrate">Vibrate</string>
     <string name="description">Enter Plan Name</string>
+    <string name="description_run">Enter Run Description</string>
     <string name="plans">Plans</string>
     <string name="settings">Settings</string>
     <string name="diary">Diary</string>
@@ -40,4 +40,5 @@
     <string name="login">Login</string>
     <string name="duration">Duration</string>
     <string name="icons8"><a href="https://icons8.com/register/?key=Qdg6">Icons powered by Icons8</a></string>
+    <string name="facebook_page">https://www.facebook.com/intervalPlus0/</string>
 </resources>
