try catch for unknown behaviors

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="diary">Diary</string>
     <string name="run">Run</string>
     <string name="share">Share</string>
+    <string name="contact">Send feedback</string>
     <string name="shareTitle">Share app using</string>
     <string name="soon">Soon available!</string>
     <string name="login">Login</string>
