--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,12 +45,11 @@
 
     <string name="running_collection_mongo_path">/api/1/databases/auction/collections/intervalRun</string>
     <string name="interval_collection_mongo_path">/api/1/databases/auction/collections/intervalSession</string>
+    <string name="runner_collection_mongo_path">/api/1/databases/auction/collections/intervalRunner/</string>
 
-    <string name="runner_url">https://api.mongolab.com/api/1/databases/auction/collections/runner?apiKey=fft3Q2J8bB2l-meOoBHZK_z3E_b5cuBz</string>
+
     <string name="apiKey">fft3Q2J8bB2l-meOoBHZK_z3E_b5cuBz</string>
     <string name="auth_url">api.mongolab.com</string>
-    <string name="runner_path">/api/1/databases/auction/collections/runner/</string>
-    <string name="runnerCollection">https://api.mongolab.com/api/1/databases/auction/collections/runner/</string>
 
     <string name="friends">Friends</string>
 
