--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,8 +23,7 @@
     <string name="seconds">Rest secs</string>
     <string name="rounds">Rounds</string>
     <string name="start_rest_secs">Start rest</string>
-    <string name="distance_meters">Meters</string>
-    <string name="distance_miles">Miles</string>
+    <string name="distance">Distance</string>
     <string name="delete">Delete</string>
     <string name="save">Save</string>
     <string name="sound">Sound</string>
