first changes after merging

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="soon">Soon available!</string>
     <string name="login">Login</string>
     <string name="duration">Duration</string>
+    <string name="addFriend">Add friend</string>
     <string name="icons8"><a href="https://icons8.com/register/?key=Qdg6">Icons powered by Icons8</a></string>
     <string name="facebook_page">https://www.facebook.com/intervalPlus0/</string>
 
